Only run 4006.83 in loop

--- a/host/xtest/Makefile
+++ b/host/xtest/Makefile
@@ -136,6 +136,7 @@ CFLAGS += -Wall -Wcast-align -Werror \
 endif
 
 CFLAGS += -g3
+CFLAGS += -Wno-unused-function
 
 LDFLAGS += -L$(OPTEE_CLIENT_EXPORT)/lib -lteec
 LDFLAGS += -lpthread -lm
