First try to build TA's, fails on assembler file
Signed-off-by: Joakim Bech <joakim.bech@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,19 +23,20 @@ include(GNUInstallDirs)
 # Compiler flags:
 #   We want to use the same flags in the entire optee_client git
 ################################################################################
-add_compile_options (
-	-Wall -Wbad-function-cast -Wcast-align
-	-Werror-implicit-function-declaration -Wextra
-	-Wfloat-equal -Wformat-nonliteral -Wformat-security
-	-Wformat=2 -Winit-self -Wmissing-declarations
-	-Wmissing-format-attribute -Wmissing-include-dirs
-	-Wmissing-noreturn -Wmissing-prototypes -Wnested-externs
-	-Wpointer-arith -Wshadow -Wstrict-prototypes
-	-Wswitch-default -Wunsafe-loop-optimizations
-	-Wwrite-strings -Werror -fPIC
- 	-Wno-missing-field-initializers
-)
-
+add_compile_options (-fPIC)
+#add_compile_options (
+#	-Wall -Wbad-function-cast -Wcast-align
+#	-Werror-implicit-function-declaration -Wextra
+#	-Wfloat-equal -Wformat-nonliteral -Wformat-security
+#	-Wformat=2 -Winit-self -Wmissing-declarations
+#	-Wmissing-format-attribute -Wmissing-include-dirs
+#	-Wmissing-noreturn -Wmissing-prototypes -Wnested-externs
+#	-Wpointer-arith -Wshadow -Wstrict-prototypes
+#	-Wswitch-default -Wunsafe-loop-optimizations
+#	-Wwrite-strings -Werror -fPIC
+# 	-Wno-missing-field-initializers
+#)
+#
 ################################################################################
 # Add sub directories
 ################################################################################
